--- a/po/hu.po
+++ b/po/hu.po
@@ -7,110 +7,99 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2003-07-12 23:21+0200\n"
-"Last-Translator: Andras Timar <timar@gnome.hu>\n"
+"POT-Creation-Date: 2004-01-22 00:17+0100\n"
+"PO-Revision-Date: 2004-01-22 13:07+0100\n"
+"Last-Translator: Andras Timar <timar@fsf.hu>\n"
 "Language-Team: Hungarian <hu@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.2\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Alkalmazások"
+msgstr "Appletek"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Alkalmazások"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME Munkaasztal"
+msgstr "Munkaasztal"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Fejlesztés"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Fejlesztés"
+msgstr "Fejlesztőkörnyezetek"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Fejlesztés"
+msgstr "Fejlesztőeszközök"
 
-#: data/toc.xml.in.h:7
-#, fuzzy
+#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
 msgid "Editors"
-msgstr "/S_zerkesztés"
+msgstr "Szövegszerkesztők"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Alkalmazások"
+msgstr "Oktatóprogramok"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Játék és szórakozás"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Általános"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
-msgstr "Súgó tartalomjegyzék"
+msgstr "Súgó tartalomjegyzéke"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Alkalmazások"
+msgstr "Internetes alkalmazások"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Rendszermag rutinok"
+msgstr "Rendszermagok"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Alkalmazások"
+msgstr "Multimédiás alkalmazások"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Irodai alkalmazások"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Alkalmazások"
+msgstr "Tudományos alkalmazások"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Értékpapírok"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Rendszerhívások"
+msgstr "Rendszer"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Segédprogramok"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Alkalmazások"
+msgstr "X-alkalmazások"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -118,15 +107,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "K_is- és nagybetűk megkülönböztetése"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Keresés"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Keresés: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -138,7 +127,7 @@ msgstr "_Előző"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Keresés elölről"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -148,50 +137,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Nem található href attribútum a yelp: dokumentumon"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Nincs több memória"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Címoldal"
 
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
-#, fuzzy
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
+#: src/yelp-man-pager.c:372
 msgid "Contents"
-msgstr "Súgó tartalomjegyzék"
+msgstr "Tartalom"
 
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Ismeretlen"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "A '%s' nevű dokumentum nem létezik"
+msgstr "A kijelölt dokumentum nem nyitható meg"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "A '%s' nevű dokumentum nem létezik"
+msgstr "A kijelölt oldal nem létezik ebben a dokumentumban."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "A '%s' nevű dokumentum nem létezik"
+msgstr "A tartalomjegyzék nem olvasható."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "A DocBook SGML-dokumentumokat többé nem támogatja a program."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "A '%s' nevű dokumentum nem létezik"
+msgstr "A kijelölt fájl nem olvasható."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -204,7 +190,7 @@ msgstr "A Yelp aktiválása sikertelen: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Ablak nyitása sikertelen."
+msgstr "Új ablak nyitása sikertelen."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -241,11 +227,11 @@ msgstr "Rendszerhívások"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "Függvények"
+msgstr "Könyvtári függvények"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "Rendszermag rutinok"
+msgstr "Rendszermagrutinok"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
@@ -268,23 +254,27 @@ msgid "System Administration"
 msgstr "Rendszeradminisztráció"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dokumentumok"
+msgstr "Dokumentum URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "A feldolgozandó dokumentum URI-ja"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
 msgstr ""
 
-#: src/yelp-toc-pager.c:880
+#: src/yelp-toc-pager.c:486
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Az OMF-file betöltése sikertelen: '%s'"
+
+#: src/yelp-toc-pager.c:892
 msgid "Categories"
 msgstr "Kategóriák"
 
-#: src/yelp-toc-pager.c:894
+#: src/yelp-toc-pager.c:906
 msgid "Documents"
 msgstr "Dokumentumok"
 
@@ -305,17 +295,14 @@ msgid "/_Edit"
 msgstr "/S_zerkesztés"
 
 #: src/yelp-window.c:238
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Szerkesztés/_Keresés az oldalon..."
+msgstr "/Szerkesztés/_Keresés..."
 
 #: src/yelp-window.c:241
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
 msgstr "/Szerkesztés/_Következő találat"
 
 #: src/yelp-window.c:244
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
 msgstr "/Szerkesztés/_Következő találat"
 
@@ -336,24 +323,20 @@ msgid "/Go/_Home"
 msgstr "/Ugrás/_Kezdőlap"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Ugrás"
+msgstr "/Ugrás/"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Előző"
+msgstr "/Ugrás/_Előző oldal"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Ugrás/_Index"
+msgstr "/Ugrás/_Következő oldal"
 
 #: src/yelp-window.c:265
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Súgó tartalomjegyzék"
+msgstr "/Ugrás/_Tartalom"
 
 #: src/yelp-window.c:269
 msgid "/_Help"
@@ -367,7 +350,7 @@ msgstr "/Súgó/_Névjegy"
 msgid "Help Browser"
 msgstr "Súgóböngésző"
 
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
+#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:60
 msgid "Section"
 msgstr "Fejezet"
 
@@ -413,244 +396,264 @@ msgstr "A GNOME súgóböngészője"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#0187;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#0171;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8222;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-msgid "About This Bibliography"
+msgid "About This Article"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:6
-msgid "About This Book"
+msgid "About This Bibliography"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:7
-msgid "About This Chapter"
+msgid "About This Book"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:8
-msgid "About This Entry"
+msgid "About This Chapter"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:9
-msgid "About This Glossary"
+msgid "About This Entry"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:10
-msgid "About This Index"
+msgid "About This Glossary"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:11
-msgid "About This Part"
+msgid "About This Index"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:12
-msgid "About This Preface"
+msgid "About This Part"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:13
-msgid "About This Reference"
+msgid "About This Preface"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:14
-msgid "About This Section"
+msgid "About This Reference"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:15
-msgid "About This Set"
+msgid "About This Section"
 msgstr ""
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
-msgid "Affiliation"
-msgstr "Alkalmazások"
+msgid "About This Set"
+msgstr ""
 
 #: stylesheets/l10n.xml.in.h:17
+msgid "Affiliation"
+msgstr "Kapcsolat"
+
+#: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
 msgstr ""
 
-#: stylesheets/l10n.xml.in.h:18
+#: stylesheets/l10n.xml.in.h:19
 msgid "Article"
 msgstr ""
 
-#: stylesheets/l10n.xml.in.h:19
+#: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
 msgstr ""
 
-#: stylesheets/l10n.xml.in.h:20
-msgid "Author"
-msgstr ""
-
 #: stylesheets/l10n.xml.in.h:21
-msgid "Bibliography"
-msgstr ""
+msgid "Author"
+msgstr "Szerző"
 
 #: stylesheets/l10n.xml.in.h:22
-msgid "Book"
-msgstr ""
+msgid "Authors"
+msgstr "Szerzők"
 
 #: stylesheets/l10n.xml.in.h:23
-msgid "Caution"
-msgstr ""
+msgid "Bibliography"
+msgstr "Irodalomjegyzék"
 
 #: stylesheets/l10n.xml.in.h:24
-msgid "Chapter"
-msgstr ""
+msgid "Book"
+msgstr "Könyv"
 
 #: stylesheets/l10n.xml.in.h:25
-msgid "Collaborator"
-msgstr ""
+msgid "Caution"
+msgstr "Figyelem"
 
 #: stylesheets/l10n.xml.in.h:26
-msgid "Colophon"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:28
-msgid "Copyright"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:29
-msgid "Date"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:30
-#, fuzzy
-msgid "Dedication"
+msgid "Chapter"
 msgstr "Fejezet"
 
+#: stylesheets/l10n.xml.in.h:27
+msgid "Collaborator"
+msgstr "Munkatárs"
+
+#: stylesheets/l10n.xml.in.h:28
+msgid "Collaborators"
+msgstr "Munkatársak"
+
+#: stylesheets/l10n.xml.in.h:29
+msgid "Colophon"
+msgstr "Kolofon"
+
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
-msgid "Editor"
-msgstr "/S_zerkesztés"
+msgid "Copyright"
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:32
-msgid "Email"
-msgstr ""
+msgid "Copyrights"
+msgstr "Copyrightok"
 
 #: stylesheets/l10n.xml.in.h:33
-msgid "Example"
-msgstr ""
+msgid "Date"
+msgstr "Dátum"
 
 #: stylesheets/l10n.xml.in.h:34
-msgid "Figure"
-msgstr ""
+msgid "Dedication"
+msgstr "Dedikáció"
 
 #: stylesheets/l10n.xml.in.h:35
-msgid "Glossary"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:36
-msgid "Important"
-msgstr ""
+msgid "Editor"
+msgstr "Szerkesztő"
 
 #: stylesheets/l10n.xml.in.h:37
-msgid "Index"
-msgstr "Index"
+msgid "Email"
+msgstr "E-mail"
 
 #: stylesheets/l10n.xml.in.h:38
-msgid "Legal Notice"
-msgstr ""
+msgid "Example"
+msgstr "Példa"
 
 #: stylesheets/l10n.xml.in.h:39
-msgid "Level"
-msgstr ""
+msgid "Figure"
+msgstr "Ábra"
 
 #: stylesheets/l10n.xml.in.h:40
+msgid "Glossary"
+msgstr "Kifejezésgyűjtemény"
+
+#: stylesheets/l10n.xml.in.h:41
+msgid "Important"
+msgstr "Fontos"
+
+#: stylesheets/l10n.xml.in.h:42
+msgid "Index"
+msgstr "Tárgymutató"
+
+#: stylesheets/l10n.xml.in.h:43
+msgid "Legal Notice"
+msgstr "Jogi megjegyzés"
+
+#: stylesheets/l10n.xml.in.h:44
+msgid "Level"
+msgstr "Szint"
+
+#: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
 msgstr ""
 
-#: stylesheets/l10n.xml.in.h:41
+#: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
 msgstr ""
 
-#: stylesheets/l10n.xml.in.h:42
+#: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
 msgstr ""
 
-#: stylesheets/l10n.xml.in.h:43
-msgid "Note"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:44
-msgid "Origin"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:45
-msgid "Other Contributor"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:46
-msgid "Part"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:47
-msgid "Preface"
-msgstr ""
-
 #: stylesheets/l10n.xml.in.h:48
-msgid "Publisher"
-msgstr ""
+msgid "Note"
+msgstr "Megjegyzés"
 
 #: stylesheets/l10n.xml.in.h:49
-msgid "Reference"
-msgstr ""
+msgid "Origin"
+msgstr "Eredet"
 
 #: stylesheets/l10n.xml.in.h:50
-msgid "Reference Entry"
-msgstr ""
+msgid "Other Contributor"
+msgstr "Egyéb hozzájáruló"
 
 #: stylesheets/l10n.xml.in.h:51
-msgid "Reference Section"
-msgstr ""
+msgid "Other Contributors"
+msgstr "Egyéb hozzájárulók"
 
 #: stylesheets/l10n.xml.in.h:52
-msgid "Revision History"
-msgstr ""
+msgid "Part"
+msgstr "Rész"
+
+#: stylesheets/l10n.xml.in.h:53
+msgid "Preface"
+msgstr "Előszó"
 
 #: stylesheets/l10n.xml.in.h:54
-msgid "See"
-msgstr ""
+msgid "Publisher"
+msgstr "Kiadó"
 
 #: stylesheets/l10n.xml.in.h:55
-msgid "See Also"
-msgstr ""
+msgid "Publishers"
+msgstr "Kiadók"
 
 #: stylesheets/l10n.xml.in.h:56
+msgid "Reference"
+msgstr "Hivatkozás"
+
+#: stylesheets/l10n.xml.in.h:57
+msgid "Reference Entry"
+msgstr "Hivatkozásbejegyzés"
+
+#: stylesheets/l10n.xml.in.h:58
+msgid "Reference Section"
+msgstr "Hivatkozás szakasz"
+
+#: stylesheets/l10n.xml.in.h:59
+msgid "Revision History"
+msgstr "Változások története"
+
+#: stylesheets/l10n.xml.in.h:61
+msgid "See"
+msgstr "Lásd"
+
+#: stylesheets/l10n.xml.in.h:62
+msgid "See Also"
+msgstr "Lásd még"
+
+#: stylesheets/l10n.xml.in.h:63
 #, fuzzy
 msgid "Set Index"
 msgstr "Index"
 
-#: stylesheets/l10n.xml.in.h:57
+#: stylesheets/l10n.xml.in.h:64
 msgid "Table"
-msgstr ""
+msgstr "Táblázat"
 
-#: stylesheets/l10n.xml.in.h:58
-#, fuzzy
+#: stylesheets/l10n.xml.in.h:65
 msgid "Table of Contents"
-msgstr "Súgó tartalomjegyzék"
+msgstr "Tartalomjegyzék"
 
-#: stylesheets/l10n.xml.in.h:59
+#: stylesheets/l10n.xml.in.h:66
 msgid "Tip"
-msgstr ""
+msgstr "Tipp"
 
-#: stylesheets/l10n.xml.in.h:60
+#: stylesheets/l10n.xml.in.h:67
 msgid "Title"
-msgstr ""
+msgstr "Cím"
 
-#: stylesheets/l10n.xml.in.h:62
+#: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Figyelem"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -711,3 +714,4 @@ msgstr "Súgó"
 
 #~ msgid "Search in the index"
 #~ msgstr "Keresés a tárgymutatóban"
+
