--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-25  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-01-25  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
