--- a/po/sl.po
+++ b/po/sl.po
@@ -5,138 +5,46 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-08-23 13:14+0200\n"
 "PO-Revision-Date: 2003-08-23 14:40+0200\n"
 "Last-Translator: Andraz Tori <andraz.tori1@guest.arnes.si>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-
-#: data/toc.xml.in.h:1
-#, fuzzy
-msgid "Applets"
-msgstr "Programi"
-
-#: data/toc.xml.in.h:2 src/yelp-man.c:429
-msgid "Applications"
-msgstr "Programi"
-
-#: data/toc.xml.in.h:3
-#, fuzzy
-msgid "Desktop"
-msgstr "Namizje GNOME"
-
-#: data/toc.xml.in.h:4 src/yelp-man.c:434
-msgid "Development"
-msgstr "Razvoj"
-
-#: data/toc.xml.in.h:5
-#, fuzzy
-msgid "Development Environments"
-msgstr "Razvoj"
-
-#: data/toc.xml.in.h:6
-#, fuzzy
-msgid "Development Tools"
-msgstr "Razvoj"
-
-#: data/toc.xml.in.h:7
-#, fuzzy
-msgid "Editors"
-msgstr "/_Uredi"
-
-#: data/toc.xml.in.h:8
-#, fuzzy
-msgid "Education Applications"
-msgstr "Programi"
-
-#: data/toc.xml.in.h:9
-msgid "Games and Entertainment"
-msgstr ""
-
-#: data/toc.xml.in.h:10
-msgid "General"
-msgstr ""
-
-#: data/toc.xml.in.h:11
-msgid "Help Contents"
-msgstr "Vsebina pomoči"
-
-#: data/toc.xml.in.h:12
-#, fuzzy
-msgid "Internet Applications"
-msgstr "Programi"
-
-#: data/toc.xml.in.h:13
-msgid "KDE"
-msgstr ""
-
-#: data/toc.xml.in.h:14
-#, fuzzy
-msgid "Kernels"
-msgstr "Funkcije jedra"
-
-#: data/toc.xml.in.h:15
-#, fuzzy
-msgid "Multimedia Applications"
-msgstr "Programi"
-
-#: data/toc.xml.in.h:16
-msgid "Office and Productivity Applications"
-msgstr ""
-
-#: data/toc.xml.in.h:17
-#, fuzzy
-msgid "Scientific Applications"
-msgstr "Programi"
-
-#: data/toc.xml.in.h:18
-msgid "Securities"
-msgstr ""
-
-#: data/toc.xml.in.h:19
-#, fuzzy
-msgid "System"
-msgstr "Sistemski klici"
-
-#: data/toc.xml.in.h:20
-msgid "Utilities"
-msgstr ""
-
-#: data/toc.xml.in.h:21
-#, fuzzy
-msgid "X Applications"
-msgstr "Programi"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
 msgstr "*"
 
 #: data/ui/yelp.glade.h:2
-msgid "C_ase sensitive"
-msgstr ""
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>V dokumentu poišči besedilo:</b>"
 
 #: data/ui/yelp.glade.h:3
-msgid "Find"
-msgstr ""
+msgid "Automatically _wrap around"
+msgstr "Samodejno _lomi"
 
 #: data/ui/yelp.glade.h:4
-msgid "_Find: "
-msgstr ""
+msgid "Find text..."
+msgstr "Poišči besedilo..."
 
 #: data/ui/yelp.glade.h:5
+msgid "Match _entire word"
+msgstr "Le _celotne besede"
+
+#: data/ui/yelp.glade.h:6
+msgid "_Match upper/lower case"
+msgstr "_Razlikuj med malimi in velikimi črkami"
+
+#: data/ui/yelp.glade.h:7
 msgid "_Next"
 msgstr "_Naprej"
 
-#: data/ui/yelp.glade.h:6
+#: data/ui/yelp.glade.h:8
 msgid "_Previous"
 msgstr "_Nazaj"
-
-#: data/ui/yelp.glade.h:7
-msgid "_Wrap around"
-msgstr ""
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -145,51 +53,6 @@ msgstr "Yelp"
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
 msgstr "Tovarna Yelp"
-
-#: src/yelp-db-pager.c:424
-msgid "No href attribute found on yelp:document"
-msgstr ""
-
-#: src/yelp-db-pager.c:439
-msgid "Out of memory"
-msgstr ""
-
-#: src/yelp-db-pager.c:616
-msgid "Titlepage"
-msgstr ""
-
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
-#, fuzzy
-msgid "Contents"
-msgstr "Vsebina pomoči"
-
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
-msgid "Unknown"
-msgstr ""
-
-#: src/yelp-error.c:46
-#, fuzzy
-msgid "The selected document could not be opened"
-msgstr "Dokument '%s' ne obstaja"
-
-#: src/yelp-error.c:52
-#, fuzzy
-msgid "The selected page could not be found in this document."
-msgstr "Dokument '%s' ne obstaja"
-
-#: src/yelp-error.c:58
-#, fuzzy
-msgid "The table of contents could not be read."
-msgstr "Dokument '%s' ne obstaja"
-
-#: src/yelp-error.c:64
-msgid "DocBook SGML documents are no longer supported."
-msgstr ""
-
-#: src/yelp-error.c:70
-#, fuzzy
-msgid "The selected file could not be read."
-msgstr "Dokument '%s' ne obstaja"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -245,6 +108,14 @@ msgstr "Funkcije knjižnjice"
 msgid "Kernel Routines"
 msgstr "Funkcije jedra"
 
+#: src/yelp-man.c:429
+msgid "Applications"
+msgstr "Programi"
+
+#: src/yelp-man.c:434
+msgid "Development"
+msgstr "Razvoj"
+
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
 msgstr "Strojne naprava"
@@ -265,390 +136,165 @@ msgstr "Drugi pogledi"
 msgid "System Administration"
 msgstr "Sistemska administracija"
 
-#: src/yelp-pager.c:118
-#, fuzzy
-msgid "Document URI"
-msgstr "Dokumenti"
-
-#: src/yelp-pager.c:119
-msgid "The URI of the document to be processed"
-msgstr ""
-
-#: src/yelp-toc-pager.c:266
-msgid "YelpTocPager: Pause count is negative."
-msgstr ""
-
-#: src/yelp-toc-pager.c:880
-msgid "Categories"
-msgstr "Kategorije"
-
-#: src/yelp-toc-pager.c:894
-msgid "Documents"
-msgstr "Dokumenti"
-
-#: src/yelp-window.c:229
-msgid "/_File"
-msgstr "/_Datoteka"
-
-#: src/yelp-window.c:230
-msgid "/File/_New window"
-msgstr "/Datoteka/_Novo okno"
-
-#: src/yelp-window.c:233
-msgid "/File/_Close window"
-msgstr "/Datoteka/_Zapri okno"
-
-#: src/yelp-window.c:237
-msgid "/_Edit"
-msgstr "/_Uredi"
-
-#: src/yelp-window.c:238
-#, fuzzy
-msgid "/Edit/_Find..."
-msgstr "/Uredi/_Poišči v strani..."
-
-#: src/yelp-window.c:241
-#, fuzzy
-msgid "/Edit/Find Ne_xt"
-msgstr "/Uredi/Po_išči znova"
-
-#: src/yelp-window.c:244
-#, fuzzy
-msgid "/Edit/Find Pre_vious"
-msgstr "/Uredi/Po_išči znova"
-
-#: src/yelp-window.c:248
-msgid "/_Go"
-msgstr "/Po_jdi"
-
-#: src/yelp-window.c:249
-msgid "/Go/_Back"
-msgstr "/Pojdi/Na_zaj"
-
-#: src/yelp-window.c:252
-msgid "/Go/_Forward"
-msgstr "/Pojdi/na_prej"
-
-#: src/yelp-window.c:255
-msgid "/Go/_Home"
-msgstr "/Pojdi/_Domov"
-
-#: src/yelp-window.c:258
-#, fuzzy
-msgid "/Go/"
-msgstr "/Po_jdi"
-
-#: src/yelp-window.c:259
-#, fuzzy
-msgid "/Go/_Previous Page"
-msgstr "_Nazaj"
-
-#: src/yelp-window.c:262
-#, fuzzy
-msgid "/Go/_Next Page"
-msgstr "/Pojdi/_Kazalo"
-
-#: src/yelp-window.c:265
-#, fuzzy
-msgid "/Go/_Contents"
-msgstr "Vsebina pomoči"
-
-#: src/yelp-window.c:269
-msgid "/_Help"
-msgstr "/_Pomoč"
-
-#: src/yelp-window.c:270
-msgid "/Help/_About"
-msgstr "/Pomoč/_O programu"
-
-#: src/yelp-window.c:332
-msgid "Help Browser"
-msgstr "Brskalnik po pomoči"
-
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
-msgid "Section"
-msgstr "Odsek"
-
-#: src/yelp-window.c:603
-msgid "Back"
-msgstr "Nazaj"
-
-#: src/yelp-window.c:604
-msgid "Show previous page in history"
-msgstr "Kaži prejšnjo stran v zgodovini"
-
-#: src/yelp-window.c:614
-msgid "Forward"
-msgstr "Naprej"
-
-#: src/yelp-window.c:615
-msgid "Show next page in history"
-msgstr "Kaži naslednjo stran v zgodovini"
-
-#: src/yelp-window.c:627
-msgid "Home"
-msgstr "Dom"
-
-#: src/yelp-window.c:628
-msgid "Go to home view"
-msgstr "Pojdi na pogled doma"
-
-#: src/yelp-window.c:834
+#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
 msgstr "Nalagam..."
 
+#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
+msgid "Section"
+msgstr "Odsek"
+
+#: src/yelp-view-index.c:480
+msgid "_Search for:"
+msgstr "_Išči za:"
+
+#. GList           *seriesids;
+#: src/yelp-view-toc.c:165
+msgid "Help Contents"
+msgstr "Vsebina pomoči"
+
+#: src/yelp-view-toc.c:166
+msgid "GNOME - Desktop"
+msgstr "Namizje GNOME"
+
+#: src/yelp-view-toc.c:167
+msgid "Additional documents"
+msgstr "Dodatni dokumenti"
+
+#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
+msgid "Manual Pages"
+msgstr "Strani priročnika (man)"
+
+#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
+msgid "Info Pages"
+msgstr "Strani info"
+
+#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
+msgid "Documents"
+msgstr "Dokumenti"
+
+#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
+msgid "Categories"
+msgstr "Kategorije"
+
+#: src/yelp-view-toc.c:447
+msgid "Manual pages"
+msgstr "Strai priročnika (man)"
+
+#: src/yelp-view-toc.c:707
+msgid "GNOME is"
+msgstr "GNOME je"
+
+#: src/yelp-view-toc.c:708
+msgid "Free Software"
+msgstr "Prosto programje"
+
+#: src/yelp-view-toc.c:709
+msgid "(C)"
+msgstr "(C)"
+
+#: src/yelp-window.c:171
+msgid "/_File"
+msgstr "/_Datoteka"
+
+#: src/yelp-window.c:172
+msgid "/File/_New window"
+msgstr "/Datoteka/_Novo okno"
+
+#: src/yelp-window.c:173
+msgid "/File/_Close window"
+msgstr "/Datoteka/_Zapri okno"
+
+#: src/yelp-window.c:175
+msgid "/_Edit"
+msgstr "/_Uredi"
+
+#: src/yelp-window.c:176
+msgid "/Edit/_Find in page..."
+msgstr "/Uredi/_Poišči v strani..."
+
+#: src/yelp-window.c:177
+msgid "/Edit/_Find again"
+msgstr "/Uredi/Po_išči znova"
+
+#: src/yelp-window.c:179
+msgid "/_Go"
+msgstr "/Po_jdi"
+
+#: src/yelp-window.c:180
+msgid "/Go/_Back"
+msgstr "/Pojdi/Na_zaj"
+
+#: src/yelp-window.c:181
+msgid "/Go/_Forward"
+msgstr "/Pojdi/na_prej"
+
+#: src/yelp-window.c:182
+msgid "/Go/_Home"
+msgstr "/Pojdi/_Domov"
+
+#: src/yelp-window.c:183
+msgid "/Go/_Index"
+msgstr "/Pojdi/_Kazalo"
+
+#: src/yelp-window.c:185
+msgid "/_Help"
+msgstr "/_Pomoč"
+
+#: src/yelp-window.c:186
+msgid "/Help/_About"
+msgstr "/Pomoč/_O programu"
+
+#: src/yelp-window.c:255 src/yelp-window.c:455
+msgid "Help Browser"
+msgstr "Brskalnik po pomoči"
+
+#: src/yelp-window.c:368
+#, c-format
+msgid "The document '%s' does not exist"
+msgstr "Dokument '%s' ne obstaja"
+
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1228
+#: src/yelp-window.c:694
 msgid "translator_credits"
-msgstr ""
-"Andraž Tori <andraz.tori1@guest.arnes.si>\n"
-"Tilen Travnik <tilen.travnik@guest.arnes.si>"
+msgstr "Andraž Tori <andraz.tori1@guest.arnes.si>\nTilen Travnik <tilen.travnik@guest.arnes.si>"
 
-#: src/yelp-window.c:1233
+#: src/yelp-window.c:698
 msgid "A Help Browser for GNOME"
 msgstr "Brskalnik pomoči za GNOME"
 
-#: stylesheets/l10n.xml.in.h:1
-msgid "&#8216;"
-msgstr ""
+#: src/yelp-window.c:812
+msgid "Back"
+msgstr "Nazaj"
 
-#: stylesheets/l10n.xml.in.h:2
-msgid "&#8217;"
-msgstr ""
+#: src/yelp-window.c:813
+msgid "Show previous page in history"
+msgstr "Kaži prejšnjo stran v zgodovini"
 
-#: stylesheets/l10n.xml.in.h:3
-msgid "&#8220;"
-msgstr ""
+#: src/yelp-window.c:824
+msgid "Forward"
+msgstr "Naprej"
 
-#: stylesheets/l10n.xml.in.h:4
-msgid "&#8221;"
-msgstr ""
+#: src/yelp-window.c:825
+msgid "Show next page in history"
+msgstr "Kaži naslednjo stran v zgodovini"
 
-#: stylesheets/l10n.xml.in.h:5
-msgid "About This Bibliography"
-msgstr ""
+#: src/yelp-window.c:838
+msgid "Home"
+msgstr "Dom"
 
-#: stylesheets/l10n.xml.in.h:6
-msgid "About This Book"
-msgstr ""
+#: src/yelp-window.c:839
+msgid "Go to home view"
+msgstr "Pojdi na pogled doma"
 
-#: stylesheets/l10n.xml.in.h:7
-msgid "About This Chapter"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:8
-msgid "About This Entry"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:9
-msgid "About This Glossary"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:10
-msgid "About This Index"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:11
-msgid "About This Part"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:12
-msgid "About This Preface"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:13
-msgid "About This Reference"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:14
-msgid "About This Section"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:15
-msgid "About This Set"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:16
-#, fuzzy
-msgid "Affiliation"
-msgstr "Programi"
-
-#: stylesheets/l10n.xml.in.h:17
-msgid "Appendix"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:18
-msgid "Article"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:19
-msgid "Audience"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:20
-msgid "Author"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:21
-msgid "Bibliography"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:22
-msgid "Book"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:23
-msgid "Caution"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:24
-msgid "Chapter"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:25
-msgid "Collaborator"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:26
-msgid "Colophon"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:28
-msgid "Copyright"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:29
-msgid "Date"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:30
-#, fuzzy
-msgid "Dedication"
-msgstr "Odsek"
-
-#: stylesheets/l10n.xml.in.h:31
-#, fuzzy
-msgid "Editor"
-msgstr "/_Uredi"
-
-#: stylesheets/l10n.xml.in.h:32
-msgid "Email"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:33
-msgid "Example"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:34
-msgid "Figure"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:35
-msgid "Glossary"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:36
-msgid "Important"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:37
+#: src/yelp-window.c:849
 msgid "Index"
 msgstr "Kazalo"
 
-#: stylesheets/l10n.xml.in.h:38
-msgid "Legal Notice"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:39
-msgid "Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:40
-msgid "Message Audience"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Message Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:42
-msgid "Message Origin"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:43
-msgid "Note"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:44
-msgid "Origin"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:45
-msgid "Other Contributor"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:46
-msgid "Part"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:47
-msgid "Preface"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:48
-msgid "Publisher"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:49
-msgid "Reference"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:50
-msgid "Reference Entry"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:51
-msgid "Reference Section"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:52
-msgid "Revision History"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:54
-msgid "See"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:55
-msgid "See Also"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:56
-#, fuzzy
-msgid "Set Index"
-msgstr "Kazalo"
-
-#: stylesheets/l10n.xml.in.h:57
-msgid "Table"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:58
-#, fuzzy
-msgid "Table of Contents"
-msgstr "Vsebina pomoči"
-
-#: stylesheets/l10n.xml.in.h:59
-msgid "Tip"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:60
-msgid "Title"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:62
-msgid "Warning"
-msgstr ""
+#: src/yelp-window.c:850
+msgid "Search in the index"
+msgstr "Išči po kazalu"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -657,58 +303,6 @@ msgstr "Dobi pomoč o GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Pomoč"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Dokument '%s' ne obstaja"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>V dokumentu poišči besedilo:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Samodejno _lomi"
-
-#~ msgid "Find text..."
-#~ msgstr "Poišči besedilo..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Le _celotne besede"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Razlikuj med malimi in velikimi črkami"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Išči za:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "Namizje GNOME"
-
-#~ msgid "Additional documents"
-#~ msgstr "Dodatni dokumenti"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Strani priročnika (man)"
-
-#~ msgid "Info Pages"
-#~ msgstr "Strani info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Strai priročnika (man)"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME je"
-
-#~ msgid "Free Software"
-#~ msgstr "Prosto programje"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Nalagam..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Išči po kazalu"
 
 #~ msgid ""
 #~ "Error while parsing the stylesheet, make sure you have your docbook "
